# s2_rut_python

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  pull_request.yml  push_branch.yml  tests.yml
docs/: conf.py  index.rst  make.bat
docs/content/user/: api.rst  quickstart.rst  user_guide.rst
docs/sphinx/: Makefile  conf.py  index.rst
examples/: example_utils.py  run_example.py  run_s2rut_example.py  temporary_example.py
quality_documentation/: s2_rut_python_QF-59.docx  s2_rut_python_requirements.docx
quality_documentation/base/: CookiecutterMacros.tex
s2_rut_python/: __init__.py  _vendor.py  _version.py  all_bands.py  contributions.py  input_s2.py  interface.py  run_s2rut.py  run_s2rut_example.py  s2_l1_rad_conf.py  s2_rut.py  s2_rut_algo.py  s2_rut_eg.py  s2_rut_eg1.py  s2_rut_interface.py  s2_rut_not_working.py  sat2xr.py  script_test.py  sza_interp.py  test.py
s2_rut_python/tests/: test_interface.py  test_s2_rut_interface.py
scripts/: all_bands.py  b1_test.py  input_s2.py  reviewed.py  s2_rut_eg.py  s2_rut_eg1.py  s2_rut_interface_1.py  test.py
to_delete?/: s2_rut_interface_1.py
